<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="hello">GTA San Andreas</string>
    <string name="app_name">Persian RolePlay</string>
    <string name="text_paused_cellular">Would you like to enable downloading over cellular connections? Depending on your data plan, this may cost you money.</string>
    <string name="text_paused_cellular_2">If you choose not to enable downloading over cellular connections, the download will automatically resume when wi-fi is available.</string>
    <string name="text_button_resume_cellular">Resume download</string>
    <string name="text_button_wifi_settings">Wi-Fi settings</string>
    <string name="text_verifying_download">Verifying Download</string>
    <string name="text_validation_complete">XAPK File Validation Complete. Select OK to exit.</string>
    <string name="text_validation_failed">XAPK File Validation Failed.</string>
    <string name="text_button_pause">Pause Download</string>
    <string name="text_button_resume">Resume Download</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_cancel_verify">Cancel Verification</string>
    <string name="notification_download_complete">Download complete</string>
    <string name="players_list_header_dialog">لیست بازیکنان</string>
    <string name="players_list_header_first_column">آِیدی</string>
    <string name="players_list_header_fourth_column">پینگ</string>
    <string name="players_list_header_second_column">نام مستعار بازیکن</string>
    <string name="players_list_header_third_column">مرحله</string>
    <string name="players_list_search_hint">جستجوی بازیکن</string>
    <string name="notification_download_failed">Download unsuccessful</string>
    <string name="state_unknown">Starting...</string>
    <string name="state_idle">Waiting for download to start</string>
    <string name="state_fetching_url">Looking for resources to download</string>
    <string name="state_connecting">Connecting to the download server</string>
    <string name="state_downloading">Downloading resources</string>
    <string name="state_completed">Download finished</string>
    <string name="state_paused_network_unavailable">Download paused because no network is available</string>
    <string name="state_paused_network_setup_failure">Download paused. Test a website in browser</string>
    <string name="state_paused_by_request">Download paused</string>
    <string name="state_paused_wifi_unavailable">Download paused because wifi is unavailable</string>
    <string name="state_paused_wifi_disabled">Download paused because wifi is disabled</string>
    <string name="state_paused_roaming">Download paused because you are roaming</string>
    <string name="state_paused_sdcard_unavailable">Download paused because the external storage is unavailable</string>
    <string name="state_failed_unlicensed">Download failed because you may not have purchased this app</string>
    <string name="state_failed_fetching_url">Download failed because the resources could not be found</string>
    <string name="state_failed_sdcard_full">Download failed because the external storage is full</string>
    <string name="state_failed_cancelled">Download cancelled</string>
    <string name="state_failed">Download failed</string>
    <string name="kilobytes_per_second">%1$s KB/s</string>
    <string name="time_remaining">Time remaining: %1$s</string>
    <string name="time_remaining_notification">%1$s left</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="dialog_join_from_launcher_msg">Вам необходимо зайти в игру используя лаунчер</string>
    <string name="dialog_join_from_launcher_ok">Принять</string>

    <string name="home">خانه</string>
    <string name="shop">فروشگاه</string>
    <string name="setting">تنظیمات</string>

    <string name="start_game">شروع بازی (سرور پرشین)</string>

    <string name="Game_Status">وضعیت بازی</string>

    <string name="Game_Stories">پست ها</string>

    <string name="telegram">تلگرام</string>
    <string name="discord">دیسکورد</string>
    <string name="forum">انجمن</string>

    <string name="not_Download_data">دیتای بازی یافت نشد</string>
    <string name="installation_data">دیتای بازی یافت شد, میتونید وارد بازی شوید</string>
    <string name="update_data">بروزرسانی جدید یافت شد, برای نصب (شروع بازی) کلیک کنید</string>

    <string name="car">ماشین</string>
    <string name="skin">لباس</string>
    <string name="item">آیتم</string>

    <string name="firstname">name</string>
    <string name="lastname">lastname</string>
    <string name="email">email</string>

    <string name="server_status">وضعیت سرور</string>

    <string name="receiving_data">درحال دریافت داده…</string>

    <string name="Language">زبان</string>
    <string name="Voice_Chat">ویس چت</string>
    <string name="Gta_Data">دیتای بازی</string>
    <string name="Modify_Mode">حالت مود</string>
    <string name="Log_Out">خروج از بازی</string>
    <string name="Delete_Data">حذف دیتا</string>

    <string name="on">روشن</string>
    <string name="off">خاموش</string>

    <string name="persian">فارسی</string>
    <string name="english">انگلیسی</string>

    <string name="Not_Data">Not Data</string>
    <string name="Data_Lite">Data Lite</string>
    <string name="Data_Full">Data Full</string>

    <string name="color">color</string>

    <string name="Launcher_Quest">سوالات لانچر</string>
    <string name="Launcher_Quest_TEXT">Persian SA-MP started its activity in 2023 to remove irans internet restrictions and fix mobile player bugs for the convenience of mobile users\n\n This version is only for the Persian Server</string>
    <string name="server_players">server_players</string>
    <string name="cancel">لغو</string>
    <string name="permission">دسترسی</string>
    <string name="permission_check">چک کردن دسترسی</string>


    <string name="chat_connected_to">Connected to</string>
    <string name="chat_t">T</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
