<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.mati.launcher.newUi.fragments.SettingFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/setting_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/btn_edit"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/firstname"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    app:layout_constraintBottom_toTopOf="@+id/textView3"
                    app:layout_constraintStart_toEndOf="@+id/img_profile"
                    app:layout_constraintTop_toTopOf="@+id/img_profile" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text=""
                    android:textColor="@color/text_gray"
                    app:layout_constraintBottom_toBottomOf="@+id/img_profile"
                    app:layout_constraintStart_toStartOf="@+id/userName" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--<TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/server_status"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <FrameLayout
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                &lt;!&ndash;<include
                    android:id="@+id/server_status"
                    layout="@layout/madul_serverstats"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />&ndash;&gt;
            </FrameLayout>-->

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/setting"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <FrameLayout
                    android:id="@+id/btn_language"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/setting_item"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/txt_Language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_margin="10dp"
                        android:text="@string/Language"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_select_Language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|end"
                        android:layout_margin="10dp"
                        android:text="English"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/btn_voiceChat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/setting_item"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/txt_VoiceChat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_margin="10dp"
                        android:text="@string/Voice_Chat"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_select_VoiceChat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|end"
                        android:layout_margin="10dp"
                        android:text="@string/on"
                        android:textColor="@color/colorGain"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/data_manager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/setting_item"
                    android:padding="8dp">


                    <TextView
                        android:id="@+id/txt_gtaData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_margin="10dp"
                        android:text="@string/Gta_Data"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_select_gtaData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|end"
                        android:layout_margin="10dp"
                        android:text="@string/Not_Data"
                        android:textColor="@color/colorLoss"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/modifyMode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/setting_item"
                    android:padding="8dp">


                    <TextView
                        android:id="@+id/txt_modifyMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_margin="10dp"
                        android:text="@string/Modify_Mode"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_select_modifyMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|end"
                        android:layout_margin="10dp"
                        android:text="@string/off"
                        android:textColor="@color/colorLoss"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/setting_item"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/txt_Fps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_margin="10dp"
                        android:text="FPS"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radioGropMain"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end|center"
                        android:layout_marginStart="64dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="8dp"
                        android:weightSum="3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sparkviewMain">

                        <RadioButton
                            android:id="@+id/radio_12h"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/range_radio_btn_selector_background"
                            android:button="@null"
                            android:checked="true"
                            android:gravity="center"
                            android:padding="12dp"
                            android:text="NoLimit"
                            android:textColor="@drawable/range_radio_btn_selector"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/radio_1d"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/range_radio_btn_selector_background"
                            android:button="@null"
                            android:checked="false"
                            android:gravity="center"
                            android:padding="12dp"
                            android:text="30FPS"
                            android:textColor="@drawable/range_radio_btn_selector"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/radio_1w"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/range_radio_btn_selector_background"
                            android:button="@null"
                            android:checked="false"
                            android:gravity="center"
                            android:padding="12dp"
                            android:text="60FPS"
                            android:textColor="@drawable/range_radio_btn_selector"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </RadioGroup>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/setting_item"
                    android:padding="8dp">


                    <TextView
                        android:id="@+id/txt_LogOut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_margin="10dp"
                        android:text="@string/Log_Out"
                        android:textColor="@color/colorLoss"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/setting_item"
                    android:padding="8dp">


                    <TextView
                        android:id="@+id/txt_deleteGame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_margin="10dp"
                        android:text="@string/Delete_Game"
                        android:textColor="@color/colorLoss"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </FrameLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>